methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:23: error: Unmatched closing brace '}' ignored here
 }
 ^