methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
     // Write your code here
  
  while (estSurBiscuit != true) {
    if (isFacingTrail(c) == true) {
      baisseBrosse();
      avance();
      leveBrosse();
    } else {
      while (isFacingTrail(c) == false) {
        gauche();
      }
    }
  }
  prendBiscuit();
  
  
    // Write your code here
}

  
 }

 // here comes your isFacingTrail method

def isFacingTrail(c: Color):Boolean = {
    // Write your code here
      
  if (estFaceMur == true) {
    return false
  }
  avance();
  if (getCouleurSol() == c) {
   	recule();
    return true

  } else {
    recule();
    return false
   

  }
  
}
